# rust-oauth-api

./: Cargo.toml  README.md  postman_collection.json
config/: default.json
migrations/: 20240320000000_create_users_table.sql  20240321000000_create_users_table.sql
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
src/handlers/: auth.rs  user.rs
src/middleware/: auth.rs
src/models/: user.rs
src/utils/: email.rs  hashing.rs  jwt.rs  mod.rs
